# benchmarks

./: .gitignore  .gitmodules  README.md  benchmark_metrics.json  config.toml  config.toml.bak  generate_plots.py  go.mod  go.sum  main.go  plot_gui.py  pyproject.toml  stress.lua
django-benchmark/: main.py  pyproject.toml  run_asgi.sh  run_wsgi.sh
django-benchmark/benchmark/: consumers.py  models.py  tasks.py  tests.py  urls.py  views.py
django-benchmark/benchmark/migrations/: 0001_initial.py  0002_alter_article_table.py
django-benchmark/config/: asgi.py  settings.py  urls.py  wsgi.py
frappe-benchmark/: apps.txt  common_site_config.json  create_symlink.py  localhost  pyproject.toml  run_frappe.sh
frappe-benchmark/benchmark_app/: __init__.py  api.py  hooks.py  modules.txt  pyproject.toml  wsgi.py
frappe-benchmark/benchmark_app/benchmark_app/: __init__.py
frappe-benchmark/benchmark_app/benchmark_app/doctype/benchmark_article/: __init__.py
frappe-benchmark/benchmark_app/doctype/benchmark_article/: benchmark_article.json  benchmark_article.py
frappe-benchmark/sites/: common_site_config.json
frappe-benchmark/sites/localhost/: site_config.json  touched_tables.json
lamu-benchmark/: config.toml  go.mod  go.sum  main.go
lamu-benchmark/benchmark/: app.go  layers.go  models.go  routes.go  views.go  websocket.go
lariv-benchmark/: config.toml  go.mod  go.sum  main.go
lariv-benchmark/benchmark/: app.go  models.go  routes.go  task.go  views.go
odoo-benchmark/: pyproject.toml  run_odoo.sh
odoo-benchmark/benchmark_plugin/: __manifest__.py
(+5 files in other folders)
