[project]
name = "frappe-benchmark"
version = "0.1.0"
description = "Frappe benchmark environment"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "frappe",
    "benchmark_app",
    "gunicorn",
    "gevent",
    "gevent-websocket",
    "websockets",
    "psycopg2-binary",
    "pymysql",
    "mysqlclient",
]

[tool.uv.sources]
frappe = { path = "../frappe", editable = true }
benchmark_app = { path = "benchmark_app", editable = true }
